[package]
authors = ["Austin Hellyer <hello@austinhellyer.me>"]
description = "An unofficial Rust wrapper for the darksky.net API."
documentation = "https://docs.austinhellyer.me/darksky.rs/latest/darksky/"
homepage = "https://github.com/zeyla/darksky.rs"
license = "ISC"
keywords = [
    "api",
    "dark",
    "darksky",
    "sky",
    "weather",
]
name = "darksky"
readme = "README.md"
repository = "https://github.com/zeyla/darksky.rs.git"
version = "0.5.0"

[dependencies]
hyper = "0.10"
serde_json = "1.0"
