[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "An unofficial Rust wrapper for the darksky.net API."
documentation = "https://docs.rs/darksky"
homepage = "https://github.com/zeyla/darksky.rs"
license = "ISC"
keywords = [
    "api",
    "dark",
    "darksky",
    "sky",
    "weather",
]
name = "darksky"
readme = "README.md"
repository = "https://github.com/zeyla/darksky.rs.git"
version = "0.5.0"

[dependencies]
hyper = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper-native-tls = "0.2"
